Fix Hero Z-index Bug

--- a/tailwind/custom/components/elements/hero.css
+++ b/tailwind/custom/components/elements/hero.css
@@ -16,7 +16,3 @@
 	filter: brightness(0.4);
 	object-fit: cover;
 }
-
-.hero__content {
-	z-index: 1;
-}
